--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -64,13 +64,13 @@ This chapter charts the evolution of the learning design. It draws on immediate 
 
 Exposing tensions is key to the process of design
 
-TADS and other types of agency are useful 
+TADS and other types of agency are useful
 
 The work of Sannino on the use of secondary stimulation in formative interventions (including 5th Dimension) informs the analysis of conflicts arising and secondary tools and processes which facilitators use to address them [@sannino_activity_2011].
 This chapter begins the process continued in later chapters.  
 
 The first section is a short summary of the phases of the design.
-
+Then conf
 
 <!-- The design description is framed within DBR language and concepts. -->
 <!-- Section describing  Game Design Patterns as  the main unit of Activity. See Blunden to frame this and to describe the utility of the idea  [@blundenInterdisciplinaryConceptActivity2009; @blundenGermCellUnit2014]. -->
