--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -8,15 +8,14 @@ layout: post
 categories: chapter
 title: 4. Emerging Learning Designs
 ---
-
-  -   [Chapter Introduction](#chapter-introduction)
-    -   [Contextual factors from practitioner perspective influencing
-        design](#contextual-factors-from-practitioner-perspective-influencing-design)
+-   [Chapter Introduction](#chapter-introduction)
 -   [Short vignette illustrating shifts in scope of
     activity](#short-vignette-illustrating-shifts-in-scope-of-activity)
     -   [Commentary on Vignette - including a brief description of the
         nested levels of activity & tools
         used](#commentary-on-vignette---including-a-brief-description-of-the-nested-levels-of-activity-tools-used)
+    -   [Commentary the use of AT scopes in data
+        ANALYSIS](#commentary-the-use-of-at-scopes-in-data-analysis)
 -   [Summary of design evolution](#summary-of-design-evolution)
 -   [Commentary on evolution of design by
     Phase](#commentary-on-evolution-of-design-by-phase)
@@ -27,33 +26,57 @@ title: 4. Emerging Learning Designs
             game](#the-half-baked-starting-platformer-game)
     -   [Phase Three](#phase-three)
     -   [Phase Four](#phase-four)
+        -   [Building Identities as Game
+            Makers](#building-identities-as-game-makers)
     -   [Phase Five](#phase-five)
 -   [Commentary on tensions emerging - IDEALLY FIND SOME KIND OF
     GROUPING - CURRENLY BY PHASE
     ONLY](#commentary-on-tensions-emerging---ideally-find-some-kind-of-grouping---currenly-by-phase-only)
-    -   [Exploring key tensions in phase
-        one](#exploring-key-tensions-in-phase-one)
-    -   [Addressing tensions and related to support materials and
-        documentation emerging in phase
-        two](#addressing-tensions-and-related-to-support-materials-and-documentation-emerging-in-phase-two)
+    -   [Phase one Tensions](#phase-one-tensions)
+    -   [Phase two - Documentation / Support
+        Tensions](#phase-two---documentation-support-tensions)
     -   [Tensions and related to navigation of various documentations
         sources](#tensions-and-related-to-navigation-of-various-documentations-sources)
--   [Learning Dimensions Map](#learning-dimensions-map)
+-   [Addressing the Play Paradox](#addressing-the-play-paradox)
+-   [Exploring affordances of Key responses to emerging
+    tensions](#exploring-affordances-of-key-responses-to-emerging-tensions)
+    -   [Code playgrounds, and web
+        technology](#code-playgrounds-and-web-technology)
+    -   [Structuring supporting
+        resources](#structuring-supporting-resources)
+    -   [Learning Dimensions Map](#learning-dimensions-map)
     -   [Limits to this map - MOVE?](#limits-to-this-map---move)
     -   [Including Coding Concepts in the Learning Map and including
         Code Cards with links to online
         Concepts](#including-coding-concepts-in-the-learning-map-and-including-code-cards-with-links-to-online-concepts)
 -   [Further discussion of learning design - HOLDING SECTION
     CURRENTLY](#further-discussion-of-learning-design---holding-section-currently)
+    -   [Discussion on Authenticity from methods chapter moved
+        here](#discussion-on-authenticity-from-methods-chapter-moved-here)
+        -   [Near-authentic processes and tools in drama and
+            project-based processes and related scenarios to increase
+            agency](#near-authentic-processes-and-tools-in-drama-and-project-based-processes-and-related-scenarios-to-increase-agency)
+        -   [Authenticity of Audience and
+            Problems](#authenticity-of-audience-and-problems)
+        -   [Authenticity of supporting documentation and design
+            concepts](#authenticity-of-supporting-documentation-and-design-concepts)
     -   [Discussion on tensions in relation to Lit Review and
         REQUESTS](#discussion-on-tensions-in-relation-to-lit-review-and-requests)
 -   [Link to next chapter](#link-to-next-chapter)
 
 
 
+## Research Questions - June 2023
+
+1. What pedagogical tools and processes are available to support novices to overcome barriers to game coding and design?
+<!-- - What pedagogical factors are significant to support novices learning coding, particularly in game making contexts? -->
+2. How can learners build agency in an evolving community of game makers?
+3. How can game design patterns support the development of coding practices with novices?
 
 
 ## Chapter Introduction  
+
+This chapter a
 
 **Recap of context and specifics of designing for informal learning**
 
