--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -76,7 +76,7 @@ title: 4. Emerging Learning Designs
 
 ## Chapter Introduction  
 
-This chapter a
+This chapter addresses the barriers to game coding and design through interviews with fellow practitioners in this domain and via exploration of tensions emerging. It is also important to introduce later findings in the following two chapters.
 
 **Recap of context and specifics of designing for informal learning**
 
@@ -178,7 +178,7 @@ Screen shot of the menu of choices. -->
 
 ## Short vignette illustrating shifts in scope of activity
 
- The following vignette, consisting of extracts of participant activity over 20 mins of a session, is presented as an summary of different scopes of activity. The participant is the child Toby who in this session has been working independently.
+The following vignette, consisting of extracts of participant activity over 20 mins of a session, is presented as an summary of different scopes of activity. The participant is the child Toby who in this session has been working independently.
 
 https://docs.google.com/document/d/1vYeVxYaRMTWPDOHwC4DEGYAkGPRIDX7wLiz0l8b7LWc/edit
 
@@ -266,7 +266,7 @@ Other participants were less proficient using this online resources and used pri
 Table 4.x.  Tools used in lower-level objectives of implementing specific code structures or stages in creating game assets
 
 <br />
-
+Phaser; Glitch, Piskel; updated game template; quick start cards; step-by-step tutorials; code examples
 In some of the more complicated game elements there were many different stages in implementing each game design pattern. For example, some patterns involve creating a new graphical element in a separate online editor called Piskel, exporting and downloading it to the laptop, and uploading it to the glitch code playground before making code changes in several parts of the code.
 
 Using the terminology of Activity Theory, each one of these stages can be viewed as a separate operation in the process of completing an action. Some of these operations are performed by Toby quickly and fluently by Toby indicating that he has performed them many times. One example is the quick navigation between the different tools. However some are new to Toby and are performed more hesitantly. For example, Toby is careful in his checking of the process of copying and pasting new code to his game code.
@@ -307,112 +307,16 @@ The following chapters describe the use of varied tools and processes in greater
 
 <!-- Table from
 https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/edit# -->
-NEED TO SIMPLIFY TABLE - MAKE IN ATOM
 
-+-------+-------------------+-------------------+-------------------+
-| Phase | Name and Date     | Description       | Resources Used    |
-+-------+-------------------+-------------------+-------------------+
-| 1     | Oct 2017 - Mar    | Participants      | Phaser 2.6.2      |
-|       | 2018              | started with a    | javascript        |
-|       |                   | blank canvas and  | library           |
-|       | Experimental      | plan and make a   |                   |
-|       | Course            | game in two       | Thimble code      |
-|       |                   | larger groups of  | playground.       |
-|       |                   | 5-6 participants  |                   |
-|       |                   | of mixed ages. A  |                   |
-|       |                   | minimal           | Online graphics   |
-|       |                   | incomplete        | editor            |
-|       |                   | starting game     | Piskel.           |
-|       |                   | code template was |                   |
-|       |                   | introduced to     |                   |
-|       |                   | support students  | Code recognition  |
-|       |                   | after the course  | activity.         |
-|       |                   | has started.      |                   |
-|       |                   |                   |                   |
-|       |                   |                   | An incomplete     |
-|       |                   |                   | game code         |
-|       |                   |                   | template          |
-|       |                   |                   |                   |
-|       |                   |                   |                   |
-|       |                   |                   | Various audio     |
-|       |                   |                   | creation tools    |
-|       |                   |                   | (Appendix R.5.x)  |
-+-------+-------------------+-------------------+-------------------+
-| 2     | May 2018 - Dec    | One-off workshops | Phaser 2.6.2      |
-|       | 2018\             | at Mozilla and    | javascript        |
-|       | \                 | Feral Vector      | library (Appendix |
-|       | Resource          | conferences and   | R.1)              |
-|       | Development Stage | to PGCE computer  |                   |
-|       |                   | students helped   | Glitch code       |
-|       |                   | focus and the     | playground        |
-|       |                   | creation of a     | (Appendix R.2.1)  |
-|       |                   | "half baked" game |                   |
-|       |                   | template and      | Print out of      |
-|       |                   | supporting online | cards with simple |
-|       |                   | and printable     | coding missions   |
-|       |                   | resources.        | (Appendix R.5.1)  |
-|       |                   |                   |                   |
-|       |                   |                   | Revised           |
-|       |                   |                   | incomplete game   |
-|       |                   |                   | template          |
-|       |                   |                   | (Appendix R.4.2)  |
-+-------+-------------------+-------------------+-------------------+
-| 3     | Jan - Feb 2019    | First iteration   | Phaser 2.6.2      |
-|       |                   | of game making    | javascript        |
-|       | Glitch Game Club  | course of 5-6     | library (Appendix |
-|       |                   | weeks. The        | R.1.1)\           |
-|       |                   | template and      | Glitch code       |
-|       |                   | resources created | playground        |
-|       |                   | in the previous   | (Appendix R.2.1)\ |
-|       |                   | stage were used   | Online graphics   |
-|       |                   | as a starting     | editor            |
-|       |                   | point but         | Piskel.(Appendix  |
-|       |                   | continued to      | R.3.1)            |
-|       |                   | evolve..          |                   |
-|       |                   |                   | Updated           |
-|       |                   |                   | incomplete game   |
-|       |                   |                   | template          |
-|       |                   |                   | (Appendix R.4.3)  |
-|       |                   |                   |                   |
-|       |                   |                   | Supporting        |
-|       |                   |                   | tutorials and     |
-|       |                   |                   | code examples\    |
-|       |                   |                   | (Appendix D.2.x)  |
-+-------+-------------------+-------------------+-------------------+
-| 4     | May 2019          | Second iteration  | As per phase 3    |
-|       |                   | of game making    | and in addition:\ |
-|       | Glitch Game Club  | course of 4 weeks | Drama scenario    |
-|       |                   | using Phaser.js,  | (Appendix E.1.1)\ |
-|       |                   |                   | Interactive chat  |
-|       |                   |                   | page in glitch    |
-|       |                   |                   | (Appendix E.1.2)  |
-+-------+-------------------+-------------------+-------------------+
-| 5     | Jan 2020 -        | Two iterations of | Make Code Arcade  |
-|       | September 2020    | game making       | (MCA) tool        |
-|       |                   | course of 5-6     | (Appendix         |
-|       | Make Code Arcade  | weeks using       | RM.1.1)\          |
-|       |                   | MakeCode Arcade   | MCA Template      |
-|       |                   | tool.             | starting          |
-|       |                   |                   | game(Appendix     |
-|       |                   | \                 | RM.1.2)           |
-|       |                   | \                 |                   |
-|       |                   |                   | MCA quick start   |
-|       |                   |                   | cards.(Appendix   |
-|       |                   |                   | RM.1.3)           |
-|       |                   |                   |                   |
-|       |                   |                   | MCA game pattern  |
-|       |                   |                   | menu (Appendix    |
-|       |                   |                   | RM.1.3)           |
-|       |                   |                   |                   |
-|       |                   |                   | MCA game pattern  |
-|       |                   |                   | tutorials         |
-|       |                   |                   | (Appendix RM.1.3) |
-|       |                   |                   |                   |
-|       |                   |                   | Learning          |
-|       |                   |                   | Dimensions Map    |
-|       |                   |                   | (Appendix M.1.1)  |
-+-------+-------------------+-------------------+-------------------+
 
+
+| **Phase, Name and Date**| **Description** | **Starting Resources**         
+|--------|------------|--------------|
+|P1: Oct 2017 - Mar 2018; Experimental Course  | Participants started with a blank canvas and were asked to plan and make a game in two larger groups of 5-6 participants of mixed ages. A minimal incomplete starting game code template was introduced to support students after the course has started.  |  Phaser 2.6.2 javascript library; Thimble code playground; online graphics editor Piskel; audio creation tools  |
+| P2: May 2018 - Dec 2018; Resource Development Stage | One-off workshops at Mozilla and Feral Vector conferences and to PGCE computer students helped focus and the creation of a “half baked” game template and supporting online and printable resources.  |  Phaser; Glitch code playground; quick start cards; incomplete game template |
+| P3: Jan - Feb 2019; Glitch Game Club | First iteration of game making course of 5-6 weeks. The template and resources created in the previous stage were used as a starting point but continued to evolve. |  Phaser; Glitch, Piskel; updated game template; quick start cards; step-by-step tutorials; code examples  |
+| P4: May 2019; Glitch Game Club 2| Second iteration of game making course with additional drama and reflective elements |  As per P3; drama scenario; interactive chat page in glitch  |
+| P5: Jan 2020 - September 2020; Make Code Arcade | Two iterations of game making course of 5-6 weeks using MakeCode Arcade tool.  |  Make Code Arcade (MCA) tool; MCA Template starting game; MCA quick start cards; MCA game pattern menu; MCA game pattern tutorials; Learning Dimensions Map   |
 
 ## Commentary on evolution of design by Phase
 
