editing down methodology and design chapter

--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -83,17 +83,32 @@ This chapter addresses the barriers to game coding and design through interviews
 - my interest in informal learning - recap rogoff and similar - and - issues of designing for informal settings
 - design based experiments - some factors - transistion from previous chapter
 
-This chapter charts the evolution of the learning design. It draws on immediate analysis of participants reactions and contributions from journal notes, participant interviews and analysis of changes in the learning resources created.
 
-Exposing tensions is key to the process of design
+**Key questions / motivations in creating a new learning community**
 
-TADS and other types of agency are useful
+The game making community is not authentic or mature in the practices they are undertaking, the kind of community practices which we can undertake are focused partly on building connections to existing knowledge and practice.
 
-The work of Sannino on the use of secondary stimulation in formative interventions (including 5th Dimension) informs the analysis of conflicts arising and secondary tools and processes which facilitators use to address them [@sannino_activity_2011].
-This chapter begins the process continued in later chapters.  
+One of my roles as designer here was to uncover and to help participants explore knowledge that they were unaware they possessed.
 
-The first section is a short summary of the phases of the design.
-Then conf
+**Outline of chapter**
+
+This chapter;
+
+- exposes tensions in this domain from interviews with peer practitioners.
+-  charts the evolution of the learning design
+- It draws on immediate analysis of participants reactions and contributions from journal notes,
+- participant interviews and analysis of changes in the learning resources created.
+
+
+**Methodology for exposing tensions**
+
+<!-- NOTE - Recap last chapter - move most /any context there.  -->
+
+Exposing tensions in activity systems is key to the process of design.
+
+The work of Sannino on the use of secondary stimulation in formative interventions informs the analysis of conflicts arising and secondary tools and processes which facilitators use to address them [@sannino_activity_2011]. TADS thus addresses transformative agency. 
+
+In addition, work to distinguish type of learner agency including transformative, authorial and instrumental agency are potentially useful tools.
 
 <!-- The design description is framed within DBR language and concepts. -->
 <!-- Section describing  Game Design Patterns as  the main unit of Activity. See Blunden to frame this and to describe the utility of the idea  [@blundenInterdisciplinaryConceptActivity2009; @blundenGermCellUnit2014]. -->
@@ -103,8 +118,6 @@ There's lots to add in here.
 chapters\planning\methodology_chapter\methodology_chapter_late_2020.odt.md
 https://drive.google.com/drive/u/1/folders/1D-VhVj-NgN3qgk3YEx4HZEozf_1UOGtE
  -->
-
-
 
 <!-- As per Rogoff's analysis of informal learning in museaums [], the process of finding a medium between structured activity and authentic activity can be challenging.
 
@@ -121,24 +134,11 @@ I set up the working pattern based on my professional experiences and my own aca
  - a desire to increase engagement based on my experiences in classroom and out of classroom - Home Ed / coder dojo experiences
  - the link to cultural practices of code patching and remixing - the example of the plumber coder potentially being someone who finishes the job rather than elegant coder.
  - other experiences of social coding being important being part of a community working on a joint project (add a quote from Dave?)
- <!-- - A walled garden approach in terms of the GDP and code documentation and examples that are used. Based on my own experience of developer documentation and varied coding approaches. -->
+ <!-- - A walled garden approach in terms of the GDP and code documentation and examples that are used. Based on my own experience of developer documentation and varied coding approaches.
 - Other examples from the interviews with practitioners are relevant to include here. -->
 
-**Practical factors**
 
-It is important to address contextual factors that facilitated and shaped development of some initial creative practices. Including:
 
-- Impact of research practicalities
-- The location at the university
-- Eliza effect of being part of a research project
-
-<!-- Eliza effect? If so how relevant? -->
-
-Availability of resources potentially novel. For example, the ability to have that number of identical computers for this audience in particular, and using this shape of working which was determined by technical reasons but which had an impact nevertheless on the ability for students to move around the room and the absence of a front for the teacher to teach from. After attempts in previous sessions I abandoned attempts to use the screen in the space to do explicit teaching. The process was very disruptive to the emerging group behaviours and practices.
-
-**Key questions / motivations in creating a new learning community**
-
-The game making community is not authentic or mature in the practices they are undertaking, the kind of community practices which we can undertake are focused partly on building connections to existing knowledge and practice. One of my roles as designer here was to uncover and to help participants explore knowledge that they were unaware they possessed.
 
 
 
@@ -451,12 +451,12 @@ These aspects inform the first half of the next chapter which addresses the proc
 Drama and fictional scenarios can help explore issues and reduce learner anxiety though coding in a role. -->
 
 
-#### Building Identities as Game Makers
+#### Building Identities as Game Makers (dropped)
 
 <!-- NOTE - MAY NEED TO REWRITE to clearly precursor next chapter -->
 
 <!-- One warm activities that took on a life of its own was a group activity of taking a Bartle test (what kind of game player are you) as extended spectrum line/grid activity [FIND DESCRIPTION SOURCE]. The process of exploring identity in this way surfaced the cheekiness of some young people and the pleasure they took in demonstrating their playful mischievousness. I began to make journal notes on this subject and talk to other games study practioners. I began to ask the question can the surfacing maker types (as per player types) encourage awareness and celebrate the emerging practices that the community was producing. -->
-
+<!--
 My journal notes see an evolution of attempts to try to build into the program, activities which help build the participants sense of their own identities of game makers or more generally digital designers. In and early tentative attempt to define in broad strokes the types of game maker behaviour and underlying goals.
 
 In doing this I have taken inspiration from Bartle's game player types [@hamari_player_2014].
@@ -468,7 +468,7 @@ I translated player types to maker types based on notes in my observation journa
  -   **Social makers:** form relationships with other game makers and players by finding out more about their work and telling stories in their game -   
  - **Planners:** like to study to get a full knowledge of the tools and what is possible before they build up their game step-by-step
  -   **Magpie makers:** like trying out lots of different things and happy to borrow code, images and sound from anywhere for quick results
- -   **Glitchers:** mess around with the code trying to see if they can break it interesting ways and cause a bit of havoc for other users
+ -   **Glitchers:** mess around with the code trying to see if they can break it interesting ways and cause a bit of havoc for other users -->
 
 
 
