shift practical factors to design

--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -90,6 +90,19 @@ The game making community is not authentic or mature in the practices they are u
 
 One of my roles as designer here was to uncover and to help participants explore knowledge that they were unaware they possessed.
 
+**Practical factors**
+
+It is important to address contextual factors that facilitated and shaped development of some initial creative practices. Including:
+
+- Impact of research practicalities
+- The location at the university
+- Eliza effect of being part of a research project
+
+<!-- Eliza effect? If so how relevant? -->
+
+Availability of resources potentially novel. For example, the ability to have that number of identical computers for this audience in particular, and using this shape of working which was determined by technical reasons but which had an impact nevertheless on the ability for students to move around the room and the absence of a front for the teacher to teach from. After attempts in previous sessions I abandoned attempts to use the screen in the space to do explicit teaching. The process was very disruptive to the emerging group behaviours and practices.
+
+
 **Outline of chapter**
 
 This chapter;
@@ -106,7 +119,7 @@ This chapter;
 
 Exposing tensions in activity systems is key to the process of design.
 
-The work of Sannino on the use of secondary stimulation in formative interventions informs the analysis of conflicts arising and secondary tools and processes which facilitators use to address them [@sannino_activity_2011]. TADS thus addresses transformative agency. 
+The work of Sannino on the use of secondary stimulation in formative interventions informs the analysis of conflicts arising and secondary tools and processes which facilitators use to address them [@sannino_activity_2011]. TADS thus addresses transformative agency.
 
 In addition, work to distinguish type of learner agency including transformative, authorial and instrumental agency are potentially useful tools.
 
