--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -112,6 +112,11 @@ This chapter;
 - It draws on immediate analysis of participants reactions and contributions from journal notes,
 - participant interviews and analysis of changes in the learning resources created.
 
+**Formative Interventions / DBR**
+
+The design of the research experiment and learning I started from a very open position and has evolved from several iterations of collaborative work with participants.
+
+One experimental team consisted of Home Educating families another involved local primary schools with Year 6 (10-11 year old) classes. Learners acted as researcher participants to guide the next iteration of the game making program both directly and indirectly. Direct input was through requests and informal feedback and structured end-of-course interviews. Indirect input came from research data in the form on the games participants created, my research journal entries on my interactions with and observations of participants and recorded audio and video data of the participants and their computer screen capture.
 
 **Methodology for exposing tensions**
 
@@ -122,6 +127,13 @@ Exposing tensions in activity systems is key to the process of design.
 The work of Sannino on the use of secondary stimulation in formative interventions informs the analysis of conflicts arising and secondary tools and processes which facilitators use to address them [@sannino_activity_2011]. TADS thus addresses transformative agency.
 
 In addition, work to distinguish type of learner agency including transformative, authorial and instrumental agency are potentially useful tools.
+
+
+
+
+
+
+
 
 <!-- The design description is framed within DBR language and concepts. -->
 <!-- Section describing  Game Design Patterns as  the main unit of Activity. See Blunden to frame this and to describe the utility of the idea  [@blundenInterdisciplinaryConceptActivity2009; @blundenGermCellUnit2014]. -->
@@ -299,6 +311,50 @@ Others in the group did not experiment in this way and used more direct help or 
 
 
 ### Commentary the use of AT scopes in data ANALYSIS
+
+
+#### Levels of Abstraction om this design (perhaps drop?)
+**moved from previous chapter_**
+The game making process can be viewed as nested activity
+
+- wider education
+- game making
+- pattern implementation
+- specific actions
+
+While game making can be seen superficially as the primary activity, I argue that a narrower objective of implementing GDPs and the dependant actions became the most vital unit of activity for participants.
+
+From the perspective of participants, the goal of implementing individual game patterns rather than the overall goal of making of a game, took up the majority of their focus. This can be evidenced in the following observations;
+
+- the frequency of GDP language referring to patterns used by pairs in particular in the process of collaborating on their games
+- the utility of the smaller unit of analysis in aiding resource creation
+- the value of completing something concrete a sense of sustaining achievement.
+- the ability to reflect after implementing each sub project,
+- any other value for practitioners, parents and young participants - i.e. in navigation and goal setting.
+
+**moved from previous chapter_**
+The implementation of GDPs as a unit of analysis for the researcher also has the following utility / validity;
+
+- There is a practicality in terms of defining possible boundaries of what to analyse in depth.
+- There is a more frequent iteration present - usually a period of playtesting after each new pattern added.
+- This research with a practitioner focus, looks to identify emerging barriers to comprehension, communication and practical barriers to implementing code structures. Thus a smaller unit that allows a large amount of granularity is useful. (compared to broader observations)
+- Each GDP can be seen as a project given an interpretation of project as the concrete implementation of a goal
+- That concreteness / implementation is particularly valid given the regular play-testing of creations often after each GDP is added in a peer environment.
+
+This sentiment is echoed by something I found in the video data. As one parent Fi expressed when looking at the documentation for implementing one of the GDPs. "It’s like a project in itself really"
+
+NOTE REWRITE THIS
+
+Analysing the implementation of GDPs as a unit of activity allow the use of useful concepts to explore the specifics of participant behaviour. In the methodology and design chapter I explored the concept of resolving tensions involved in tool use and interaction with the learning design. In this section I briefly explore the utility of the concepts of activity, actions and operations when applied to implementing GDPs [@kuutti_activity_1995].
+
+  "...actions consist of chains of operations, which are well-defined habitual routines used as answers to conditions faced during the performing of the action. Initially each operation is a conscious action, consisting of both the orientation and execution phases, but when the corresponding model is good enough and the action has been practiced long enough, the orientation phase will fade and the action will be collapsed into an operation, which is much more fluent." [@kuutti_activity_1995]
+
+
+<!-- NOTE
+Each of these with differing levels of abstraction.
+Break down that of GDPs? -->
+
+**Original writing**
 
 In the last chapter, we examined the use of Rogoff's 3 lenses of cultural, social and personal activity. We can see a broad alignment of these lenses and the scopes of the activity systems above.
 
