work on barriers and design chapter

--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -8,6 +8,7 @@ layout: post
 categories: chapter
 title: 4. Emerging Learning Designs
 ---
+-   [Research Questions - June 2023](#research-questions---june-2023)
 -   [Chapter Introduction](#chapter-introduction)
 -   [Short vignette illustrating shifts in scope of
     activity](#short-vignette-illustrating-shifts-in-scope-of-activity)
@@ -16,18 +17,18 @@ title: 4. Emerging Learning Designs
         used](#commentary-on-vignette---including-a-brief-description-of-the-nested-levels-of-activity-tools-used)
     -   [Commentary the use of AT scopes in data
         ANALYSIS](#commentary-the-use-of-at-scopes-in-data-analysis)
+        -   [Levels of Abstraction om this design (perhaps
+            drop?)](#levels-of-abstraction-om-this-design-perhaps-drop)
 -   [Summary of design evolution](#summary-of-design-evolution)
 -   [Commentary on evolution of design by
     Phase](#commentary-on-evolution-of-design-by-phase)
     -   [Phase one - an exploratory series of game making
         sessions](#phase-one---an-exploratory-series-of-game-making-sessions)
     -   [Phase Two](#phase-two)
-        -   [The half-baked starting platformer
-            game](#the-half-baked-starting-platformer-game)
     -   [Phase Three](#phase-three)
     -   [Phase Four](#phase-four)
-        -   [Building Identities as Game
-            Makers](#building-identities-as-game-makers)
+        -   [Building Identities as Game Makers
+            (dropped)](#building-identities-as-game-makers-dropped)
     -   [Phase Five](#phase-five)
 -   [Commentary on tensions emerging - IDEALLY FIND SOME KIND OF
     GROUPING - CURRENLY BY PHASE
@@ -163,10 +164,6 @@ I set up the working pattern based on my professional experiences and my own aca
 - Other examples from the interviews with practitioners are relevant to include here. -->
 
 
-
-
-
-
 <!-- These sections could follow a pattern of
  - rogoff's description / examples - but likely include a larger breakdown of 3 foci in Methodology Chapter.
  - my model examples
@@ -183,8 +180,6 @@ In the 3 foci model Rogoff refers to apprenticeship as a way of illustrating the
 - Drama Process: specifically designed ot overcome limits of the classroom.
 - Playtesting: the process of playtesting, either self or peer links back to a community purpose
  -->
-
-
 
 <!-- __Insert image of code__
 
@@ -437,7 +432,7 @@ This approach was more prescriptive than I would have adopted, however it worked
 https://docs.google.com/document/d/1lk-8dHFFNbFXFtE5vV6_GHXYRzU7ATWZAIe-hNunyx8/edit#
  -->
 
-#### The half-baked starting platformer game
+<!-- #### The half-baked starting platformer game
 
 NOTE - ALSO EXPLORED IN NEXT CHAPTER - HOW TO ARRANGE?
 
@@ -457,7 +452,7 @@ The use and design characteristics of the starting point of a half-baked game.
 Player movement was a key to playtesting feedback as such three  key variables were highlighted at the very start of the game code and given descriptive names to facilitate their editing. When testing the game, the player's jump height was not great enough to allow progression up from the floor to one of the platform thus thwarting the collection of items.
 
 Game progression require altering at least one of the descriptively names variables associated with jump height and then activating a preview window to observer the changes by playing the game in a new browser tab.
-<!--FIND  Some evidence of building proficiency with significant work to change these three -->
+<!--FIND  Some evidence of building proficiency with significant work to change these three   
 
     // Variables that change how the player moves
     var gravity = 500;
@@ -489,7 +484,7 @@ The
 
 PARK FOR NOW - Maybe move to Design
 The concept of the feel of the game or the challenges maps to the Dynamics of MDA framework.
-
+ -->
 
 
 ### Phase Three
@@ -574,11 +569,39 @@ https://docs.google.com/document/d/1FIPn2dEB2aCKZi5z05j69cnHgpGNXFh1_SPV6h5l12g/
 <!-- NOTE - DEVELOP THIS ASPECT OF INCLUSIVE ENVIRONMENT TO REDUCE STRESS - MOVE FROM NEXT CHAPTER?  -->
 
 
-#### Phase one Tensions
+## Participant Conflicts & and Design Tensions
+
+Not sure how barriers fit here.
+
+But in Sannino's later work conflicts are vital for TADS - larger shifts.
+
+Design tensions are also noted in this chapter.
+The differing role of instrumental agency, and the work of learning designers to remove  barriers, vs the potential for learners to address and overcome them is relevant here.
+
+NOTE STILL NOT SURE HOW TO STRUCTURE - EXAMING
+Conflicts - barriers and tensions below.
+KEEP READING
+
+
+
+### Participant Conflicts / Obstacles
+
+
+#### Conflict / Barrier - Learners difficulties  writing valid code
+
+
+
+Code playground provides immediate feedback. I chose a code editing tool set which drew on relevant design principles explored in the literature review (Resnick and Rosenbaum, 2013).
+One of the principles that I prioritised in the choice of tools was that of immediate feedback for participants. For example, in the code editing interface of glitch.com shown in Illustration 1, changes made to the code on the left section take immediate effect in the resultant game on the right side of the screen.
+
+
+#### Phase one Design Tensions
 
 
 **Learner disengagement if game coding is taught in an instructionist / from first principles (especially in younger ages)**
 In my journal notes, I reflect on the difficulty of interupting the flow of making activities once they are underway. I thus began avoiding stopping making to share points to the whole class and avoid demonstrating key concepts on the screen.
+
+
 
 **Learner anxiety if hardcore coding environment and peer working dynamics**
 One family dropped out and in their exit interview they shared that at one point we looked around and just saw people doing hardcore coding and we no longer felt at home in the environment. In this emergent design, they had mostly completed asset design and narrative development and the only coding remained. I thus wanted to address the tension between completing the project and alienation from just coding.
@@ -603,10 +626,11 @@ https://docs.google.com/document/d/1VL8FPnrBUbcpwL1nmGLCsF1t2JjkitQV_3N8DYeFcoM/
 The process of parents getting in the way of children's not minding jumping in and invading social space struck me. Rather than the larger groups, smaller groups, allowing some children to work by themselves and others with parents. Avoiding large group framentation
 
 **Learners may not find coding a project a motivating project if it is only a private activity with no end audience.**
+
+
 Play Testing - each lesson can help with short term motivation of having a game product ready  for others to play.  Showcase events help longer-term motivation towards and aid prioritisation as learners near the end of their project.
 
-**Barrier - Learners difficulties assessing if they are writing valid code**. Code playground provides immediate feedback. I chose a code editing tool set which drew on relevant design principles explored in the literature review (Resnick and Rosenbaum, 2013).
-One of the principles that I prioritised in the choice of tools was that of immediate feedback for participants. For example, in the code editing interface of glitch.com shown in Illustration 1, changes made to the code on the left section take immediate effect in the resultant game on the right side of the screen.
+
 
 **Authenticity of coding environment**.  
 
@@ -1184,19 +1208,18 @@ https://docs.google.com/spreadsheets/d/1EvMehUNHIGj0xRyrKgBxj5GwOGHwnTFw9EMBJ3Ot
 
 This chapter has dealt with the evolution of design in initial phases and responses to learner experience to resolve tensions.
 
-Due to the complexity and many moving parts of the design it has been mostly descriptive.
+Three following chapters with a greater focus on the learner response to challenges of game making in the recorded sessions.
 
-While CHAT provides the technique of highlighting emerging tensions and resolutions, to undertake deeper analysis I will an analytical process proposed by Rogoff which examines learning communities using 3 foci.
+<!-- Due to the complexity and many moving parts of the design it has been mostly descriptive. -->
 
-This process begins in this chapter with a focus on evolving design and continues in with three following chapters with a greater focus on the learner response to challenges of game making in the recorded sessions.
+<!-- While CHAT provides the technique of highlighting emerging tensions and resolutions, to undertake deeper analysis I will an analytical process proposed by Rogoff which examines learning communities using 3 foci. -->
+
+
 
 
 <!--
-
 ## List of appendices for this chapter
-
 ### Tensions of the 3M design evolution
-
 https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/edit -->
 
 <!--
