EDITING DOWN PHASES

--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -384,12 +384,16 @@ https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/
 
 ## Commentary on evolution of design by Phase
 
-### Phase one - an exploratory series of  game making sessions
+### Phase one and two
 
 <!-- NOTE - The evolution involves phases and then tension - what and how to cover both?  -->
 <!-- This phase took place before the official start of this research and relevant ethics application. As such,  -->
 
-This stage was aimed not at collecting user data rather than building my own background knowledge and competency as a facilitator. The first phase of delivery in late 2018 was based on initial research stage; I drew on literature to identify factors to consider when designing for collaboration, adopting a project based approach inspired by design thinking. To inculcate parents and children in to the culture of retro video games I began initial sessions by inviting participants to older arcade games on laptops.
+Phase one was an extended, exploratory series of game making sessions over several months. This stage was aimed not at collecting user data rather than building my own background knowledge and competency as a facilitator.
+
+<!-- The first phase of delivery in late 2018 was based on initial research stage; I drew on literature to identify factors to consider when designing for collaboration, adopting a project based approach inspired by design thinking.  -->
+
+To inculcate parents and children in to the culture of retro video games I began initial sessions by inviting participants to older arcade games on laptops.
 
 <!-- Game filled laptops.  
 Should this be added to the table above
@@ -408,18 +412,15 @@ Some of methods emerged from the start including;
 - a final public showcase - At the end of this stage participants showed their games to students in the foyer of the MMU Brooks building and gave me feedback on their participation in the programme.
 
 
+Phase two comprised one off sessions with adaptions based on my observations, and feedback from participants of phase one.  
 
-### Phase Two
-
-THIS SECTION NEEDS A LOT OF WORK - ADDRESSING DUPLICATION WITH THE ABOVE AND INTEGRATING ANALYSIS
-
-**Transition to Phase 2 due to feedback**
-
+MOVE THIS
 Key extracts from participant feedback follow.
 
 - Feedback from one family that dropped out as production changed from planning and asset design to implementation in code. The felt alienated by the "hardcore coding" that was happening around them.
 - There was a general consensus that the process was too long general consensus
-- more or work out right format
+- more or work out right format -
+  THESE ARE EMERGING CONFLICTS - MOVE LATER.
 
 
 Phase two presented key challenges. The first was to try to present the essence of my evolving learning design of phaser and a code playground to  PGCE students in a smaller time scale. And in the process of preparing a 90 minute workshop for the Mozilla conference
@@ -487,35 +488,35 @@ The concept of the feel of the game or the challenges maps to the Dynamics of MD
  -->
 
 
-### Phase Three
+### Phase Three & Four
 
 The delivery of the second phase in early 2019 drew on this participant feedback and detailed reading of relevant literature to bring substantial changes to the programme.
 
 The key addition built on the quick cards of the previous phase, that being to pre-prepare code examples illustrating key game features requested by participants.
 
-In phase one I worked with learners when they were creating a wish list of game features to add to their game. Some of these were aesthetic in nature to do with the graphical representation of game characters, hazards and background images. Some most accurately described as game mechanics including: jumping on enemies; finding a door or flag to progress to the next level; and collect all food before progressing to next level. Others concerned other fundamental aspects concerning game space including: size of game world,
+In phase one I worked with learners when they were creating a wish list of game features to add to their game.
+
+WHERE TO INCLUDE DISCUSSION ON HOW THESE WERE GROUPED. 
+
+Some of these were aesthetic in nature to do with the graphical representation of game characters, hazards and background images. Some most accurately described as game mechanics including: jumping on enemies; finding a door or flag to progress to the next level; and collect all food before progressing to next level. Others concerned other fundamental aspects concerning game space including: size of game world,
 
 I developed tutorials to support students implement these elements.
 
 This approach aligns with inclusive education principles in that it increases the choices of students, scaffolds the way they can access resources and allows them to keep a track of their own progress.
 
 
-### Phase Four
-
 <!-- I also carried out four video-recorded interviews with practitioners who work with creative methods and technology with young people or families. Early analysis of these interviews has helped shape the evolving design of my programme and has brought into focus key areas of interest already identified in journal entries. -->
 
-This iteration was very similar in terms of tool use to the previous phase with one small change. I revised the an online project-hub to link to the project chapters rather than the code examples.
+Phase four used the same toolset as previous phase with one small change.  In addition, I drew on some previous work with the MMU Faculty of Education drama department [@caldwell_drama_2019] to create a simple drama process to give a simple external motivation and narrative to the creation of games for a fictional audience of visiting aliens. This element of the learning design was designed to increase engagement of young people, to scaffold meta-reflection processes, and to allow parents to explore digital issues.
 
-In addition, I drew on some previous work with the MMU Faculty of Education drama department [@caldwell_drama_2019] to create a simple drama process to give a simple external motivation and narrative to the creation of games for a fictional audience of visiting aliens. This element of the learning design was designed to increase engagement of young people, to scaffold meta-reflection processes, and to allow parents to explore digital issues.
-
-These aspects inform the first half of the next chapter which addresses the process of creating an inclusive creative coding environment.
+<!-- These aspects inform the first half of the next chapter which addresses the process of creating an inclusive creative coding environment. -->
 
 <!--
 **Learners may feel alienated from coding as a practice and need a way into the process.**
 Drama and fictional scenarios can help explore issues and reduce learner anxiety though coding in a role. -->
 
 
-#### Building Identities as Game Makers (dropped)
+<!-- #### Building Identities as Game Makers (dropped) -->
 
 <!-- NOTE - MAY NEED TO REWRITE to clearly precursor next chapter -->
 
